Incluir un fichero en otro

--- a/blog/templates/saludo.html
+++ b/blog/templates/saludo.html
@@ -1,4 +1,4 @@
-<html>
+<!--<html>
   {# Esto es un comentario de una línea #}
   {% comment %}
     Esto es un
@@ -16,4 +16,6 @@
     {% endif %}
     </ul> 
   </body>
-</html>
+</html> -->
+
+{% include "barra.html" %}
